--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,21 @@
-// Начните писать стили здесь
+@import "global/body.less";
+@import "global/html.less";
+@import "global/variables.less";
+@import "global/page-footer.less";
+@import "global/social-container.less";
+@import "global/visually-hidden.less";
+@import "main/page-header.less";
+@import "global/main-nav.less";
+@import "main/link-arrow.less";
+@import "main/main-descriptions.less";
+@import "main/main-example.less";
+@import "main/main-logo.less";
+@import "main/page-main.less";
+@import "main/produsct-set.less";
+@import "form/page-form.less";
+@import "catalog/additionally-wrapper.less";
+@import "catalog/gift.less";
+@import "catalog/page-catalog.less";
+@import "catalog/product-card.less";
+@import "catalog/product-container.less";
+
