--- a/source/less/catalog/additionally-wrapper.less
+++ b/source/less/catalog/additionally-wrapper.less
@@ -34,7 +34,8 @@
   margin-bottom: 15px;
 }
 
-.additionally-wrapper__amount, .additionally-wrapper__price {
+.additionally-wrapper__amount,
+.additionally-wrapper__price {
   font-family: "Oswald", sans-serif;
   font-style: normal;
   font-weight: 400;
