правки по замечаниям

--- a/source/less/blocks/additionally-wrapper.less
+++ b/source/less/blocks/additionally-wrapper.less
@@ -23,6 +23,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
+  text-transform: uppercase;
   color: #222222;
   margin: 0 0 13px;
 }
@@ -36,11 +37,11 @@
 
 .additionally-wrapper__amount,
 .additionally-wrapper__price {
-  font-family: "Oswald", sans-serif;
+  font-family: "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 16px;
+  font-size: 14px;
+  line-height: 14px;
   color: #444444;
 }
 
@@ -50,6 +51,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  text-transform: uppercase;
   color: #ffffff;
   display: block;
   text-decoration: none;
