--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -31,6 +31,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  text-transform: uppercase;
   margin: 0 66px 16px 0;
   width: 76px;
 }
@@ -47,6 +48,7 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
+  color: #444444;
   margin: 0;
 }
 
@@ -57,10 +59,11 @@
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
+  text-transform: uppercase;
   text-decoration: none;
   text-align: center;
   background-color: @green;
   align-self: center;
-  padding: 10px 114px;
+  padding: 10px 109px;
   margin-bottom: 14px;
 }
