--- a/source/less/blocks/main-descriptions.less
+++ b/source/less/blocks/main-descriptions.less
@@ -25,7 +25,7 @@
 }
 
 .main-descriptions__item {
-  font-family: "Oswald", sans-serif;
+  font-family: "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
