--- a/source/less/blocks/main-example.less
+++ b/source/less/blocks/main-example.less
@@ -48,6 +48,7 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
+  text-transform: uppercase;
   text-align: center;
 }
 
@@ -57,6 +58,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+  text-transform: uppercase;
   text-align: center;
 }
 
