--- a/source/less/blocks/main-logo.less
+++ b/source/less/blocks/main-logo.less
@@ -36,6 +36,7 @@
   font-size: 14px;
   line-height: 14px;
   color: #ffffff;
+  text-transform: uppercase;
   padding: 0;
   margin: 0;
 }
@@ -54,6 +55,7 @@
   line-height: 18px;
   color: #ffffff;
   text-decoration: none;
+  text-transform: uppercase;
   text-align: center;
   background-color: @green;
   margin-top: 138px;
