--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -30,6 +30,7 @@
   line-height: 20px;
   color: #000000;
   text-align: center;
+  text-transform: uppercase;
   text-decoration: none;
   display: block;
 }
