--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -35,16 +35,18 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  text-transform: uppercase;
   padding: 53px 37px 0;
   margin: 0 0 8px;
 }
 
 .page-catalog__subtitle {
-  font-family: "Oswald", sans-serif;
+  font-family: "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
+  color: #444444;
   margin: 0 0 21px;
 }
 
@@ -55,6 +57,7 @@
   font-size: 16px;
   line-height: 20px;
   color: #444444;
+  text-transform: uppercase;
   text-decoration: none;
   text-align: center;
   background-color: #f2f2f2;
