--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -2,8 +2,8 @@
   font-family: "Oswald", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 60px;
-  line-height: 60px;
+  font-size: 36px;
+  line-height: 36px;
   border-top: 1px solid #d9d9d9;
   margin: 0 0 54px;
   padding: 27px 41px 0 20px;
@@ -15,6 +15,7 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 30px;
+  text-transform: uppercase;
   margin: 0 0 38px;
   padding: 0 74px 0 20px;
 }
@@ -39,11 +40,14 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
+  color: #444444;
+  text-transform: uppercase;
   white-space: nowrap;
   margin-right: 10px;
 }
 
 .page-form__radio-label {
+  color: #222222;
   padding-left: 45px;
 }
 
@@ -62,8 +66,13 @@
 }
 
 .page-form__input {
+  font-family: "Oswald", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  padding: 13px 15px;
   border: 1px solid #f7f7f7;
-  height: 46px;
   width: 100%;
 
   &::placeholder {
@@ -72,7 +81,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
-    padding: 10px;
+    text-transform: uppercase;
   }
 }
 
@@ -119,9 +128,11 @@
   font-size: 16px;
   line-height: 18px;
   margin-bottom: 23px;
+  padding: 10px 12px;
 
   &::placeholder {
-    padding: 9px 12px 0 15px;
+    text-transform: uppercase;
+    color: #444444;
   }
 }
 
@@ -136,13 +147,20 @@
   font-size: 14px;
   line-height: 18px;
   color: #ffffff;
-  border: none;
+  text-transform: uppercase;
   text-align: center;
+  border: none;
   background-color: @green;
   padding: 7px 20px;
   width: 240px;
 }
 
 .page-form__correction {
+  font-family: "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: #000000;
   margin: 21px 82px 32px;
 }
