--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,20 +1,18 @@
-@import "global/body.less";
-@import "global/html.less";
+@import "global/global.less";
+@import "global/font.less";
 @import "global/variables.less";
-@import "global/page-footer.less";
-@import "global/social-container.less";
-@import "global/visually-hidden.less";
-@import "main/page-header.less";
-@import "global/main-nav.less";
-@import "main/link-arrow.less";
-@import "main/main-descriptions.less";
-@import "main/main-example.less";
-@import "main/main-logo.less";
-@import "main/page-main.less";
-@import "main/produsct-set.less";
-@import "form/page-form.less";
-@import "catalog/additionally-wrapper.less";
-@import "catalog/gift.less";
-@import "catalog/page-catalog.less";
-@import "catalog/product-card.less";
-@import "catalog/product-container.less";
+@import "blocks/page-footer.less";
+@import "blocks/social-container.less";
+@import "blocks/visually-hidden.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/main-descriptions.less";
+@import "blocks/main-example.less";
+@import "blocks/main-logo.less";
+@import "blocks/page-main.less";
+@import "blocks/produsct-set.less";
+@import "blocks/page-form.less";
+@import "blocks/additionally-wrapper.less";
+@import "blocks/gift.less";
+@import "blocks/page-catalog.less";
+@import "blocks/product-card.less";
