--- a/source/less/global/font.less
+++ b/source/less/global/font.less
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Oswald";
-  font-style: regular;
+  font-style: normal;
   font-weight: 400;
   src: url("../fonts/oswaldregular.woff2"),
     url("../fonts/oswaldregular.woff");
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: "Oswald";
-  font-style: medium;
+  font-style: normal;
   font-weight: 500;
   src: url("../fonts/oswaldmedium.woff2"),
     url("../fonts/oswaldmedium.woff");
