--- a/source/less/blocks/main-descriptions.less
+++ b/source/less/blocks/main-descriptions.less
@@ -1,5 +1,17 @@
 .main-descriptions {
-  padding: 20px;
+  padding: 25px 20px 53px;
+  margin: 0 auto;
+  max-width: 1440px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 30px 47px;
+    border-bottom: 1px solid #d9d9d9;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 110px 69px;
+    border-bottom: none;
+  }
 }
 
 .main-descriptions__wrapper {
@@ -14,14 +26,32 @@
   font-size: 36px;
   line-height: 40px;
   margin: 0 0 40px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin: 0 0 32px;
+  }
 }
 
 .main-descriptions__list {
   display: flex;
   flex-direction: column;
+  list-style-type: none;
   margin: 0;
   padding: 0;
-  list-style-type: none;
+  min-width: 256px;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 154px;
+    row-gap: 37px;
+  }
+
+  @media (min-width: @desktop-width) {
+    column-gap: 95px;
+  }
 }
 
 .main-descriptions__item {
@@ -31,9 +61,19 @@
   font-size: 14px;
   line-height: 18px;
   color: #444444;
+  padding-left: 80px;
   margin-bottom: 24px;
 
   &:last-child {
     margin-bottom: 0;
+  }
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    padding: 151px 29px 57px 0;
+    max-width: 230px;
+    margin-bottom: 0;
+    box-sizing: border-box;
   }
 }
