--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,24 +1,47 @@
 .main-nav {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
+.main-nav__toggle {
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
 .main-nav__list {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+  }
 }
 
 .main-nav__item {
-  width: 320px;
+  max-width: 320px;
   padding: 23px 70px;
   border-top: 1px solid #e6e6e6;
 
   &:last-child {
     border-bottom: 1px solid #e6e6e6;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    margin-right: 35px;
+    border: none;
+
+    &:last-child {
+      border-bottom: none;
+    }
   }
 }
 
@@ -33,4 +56,15 @@
   text-transform: uppercase;
   text-decoration: none;
   display: block;
+
+  @media (min-width: @tablet-width) {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
