--- a/source/less/blocks/produsct-set.less
+++ b/source/less/blocks/produsct-set.less
@@ -2,17 +2,46 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 30px 45px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+    padding: 0 110px 69px;
+    margin: 0 auto;
+    max-width: 1440px;
+    box-sizing: border-box;
+  }
 }
 
 .product-set__wrapper {
   background-color: #f2f2f2;
+  padding: 20px;
   margin-bottom: 20px;
 
   &:last-child {
     margin-bottom: 0;
   }
-  padding: 20px;
-}
+
+  @media (min-width: @tablet-width) {
+    padding: 77px 316px 53px 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 570px;
+    margin-bottom: 0;
+    padding: 77px 51px 59px 52px;
+    margin-right: 80px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+   }
+  }
 
 .product-set__title {
   font-family: "Oswald", sans-serif;
@@ -22,6 +51,16 @@
   line-height: 37px;
   text-transform: uppercase;
   margin: 0 0 29px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: center;
+    margin: 0 0 73px;
+  }
 }
 
 .product-set__description {
@@ -34,7 +73,22 @@
   border-bottom: 1px solid #d9d9d9;
   margin: 0 0 15px;
   padding-bottom: 23px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
+    max-width: 340px;
+    border: none;
+    margin: 0 0 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 467px;
+    margin: 0 0 27px;
+  }
 }
+
 
 .product-set__link {
   font-family: "Oswald", sans-serif;
@@ -47,4 +101,9 @@
   text-decoration: none;
   margin-top: 15px;
   width: 134px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
