--- a/source/less/blocks/social-container.less
+++ b/source/less/blocks/social-container.less
@@ -34,6 +34,16 @@
     background-color: #d9d9d9;
     content: "";
   }
+
+  @media (min-width: @tablet-width) {
+    &::before{
+      display: none;
+    }
+
+    &::after{
+      display: none;
+    }
+  }
 }
 
 .social-container__item {
