--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,30 +2,38 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 65px;
+  min-height: 65px;
   padding: 0 20px;
-  max-width: 1440px;
+  margin: 0 auto;
+  box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
+    align-items: end;
+    flex-wrap: nowrap;
     padding: 0 30px;
+    min-height: 76px;
+    max-width: 768px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 53px 110px;
+    padding: 53px 110px 29px;
+    max-width: 1440px;
+  }
+}
+
+.page-header--nojs {
+  @media (max-width: @mobile-width-only) {
+    flex-wrap: wrap;
   }
 }
 
 .page-header__logo-container {
   display: flex;
   align-items: center;
+  min-height: 65px;
 
   @media (min-width: @tablet-width) {
-    justify-content: space-between;
-    height: 75px;
-  }
-
-  @media (min-width: @desktop-width) {
-    height: 112px;
+    align-items: flex-end;
   }
 }
 
@@ -34,5 +42,27 @@
 
   &:nth-child(2) {
     margin-right: 65px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &:last-child {
+      display: none;
+    }
+  }
+}
+
+.page-header__logo-image {
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+
+  @media (min-width: @tablet-width) {
+    content: url("../img/page-header-logo-tablet.svg");
+    width: 174px;
+    height: 52px;
   }
 }
