--- a/source/less/blocks/main-example.less
+++ b/source/less/blocks/main-example.less
@@ -83,23 +83,36 @@
   @media (min-width: @tablet-width) {
     justify-content: start;
     max-width: 1440px;
+    margin-bottom: 250px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
   }
 }
 
-.main-example__fieldset {
+.main-example__container {
+  position: relative;
   padding: 0;
   margin: 0 28px 20px 0;
   width: 124px;
   border-radius: 3px;
   box-sizing: border-box;
+  border: 2px solid #c3c3c3;
 
   &:nth-child(2) {
     margin-right: 0;
   }
 
   @media (min-width: @tablet-width) {
-    margin: 0 42px 85px 0;
+    margin: 0 42px 0 0;
     width: 162px;
+
+    &:nth-child(2) {
+      .main-example__legend {
+        left: 14px;
+      }
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -108,6 +121,10 @@
 }
 
 .main-example__legend {
+  position: absolute;
+  top: 47px;
+  left: 18px;
+  background-color: #eaeaea;
   font-family: "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -120,7 +137,14 @@
   @media (min-width: @tablet-width) {
     font-size: 14px;
     line-height: 14px;
+    top: 62px;
+    left: 25px;
     width: auto;
+    background-color: #ffffff;
+
+    @media (min-width: @desktop-width) {
+      background-color: #eaeaea;
+    }
   }
 }
 
@@ -195,21 +219,114 @@
   padding: 0 20px 40px;
 
   @media (min-width: @tablet-width) {
+    position: relative;
     background-color: #eaeaea;
-    padding: 0 30px 62px;
+    padding: 366px 30px 62px;
   }
 
   @media (min-width: @desktop-width) {
     justify-content: space-between;
-    padding: 0 84px 70px;
+    padding: 357px 84px 70px;
     width: 616px;
   }
 }
 
 .main-example__range-image {
   margin-bottom: 15px;
+
+  @media (min-width: @tablet-width) {
+    content: url("../img/image_cat_tablet.png");
+    width: 592px;
+    height: 511px;
+    position: absolute;
+    top: -170px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: -175px;
+  }
 }
 
 .main-example__range-slider {
   display: flex;
+  align-items: center;
+}
+
+.main-example__button {
+  font-family: "Oswald", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  border: none;
+  background-color: #eaeaea;
+
+  @media (min-width: @tablet-width) {
+    border-bottom: 1px dotted #000000;
+
+    &:hover {
+      border-bottom: 1px solid #000000;
+    }
+
+    &:active {
+      border-color: transparent;
+    }
+  }
+}
+
+.main-example__range-scale {
+  position: relative;
+  width: 86px;
+  height: 14px;
+  border: 1px solid #cdcdcd;
+  border-radius: 6px;
+  margin: 0 13px;
+  background-color: #ffffff;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    width: 426px;
+    height: 6px;
+    border: none;
+    background-color: #dcdcdc;
+    margin: 0 23px;
+  }
+}
+
+.main-example__range-button {
+  position: absolute;
+  top: 3px;
+  left: 6px;
+  width: 36px;
+  height: 6px;
+  background-color: @green;
+  border-radius: 6px;
+  border: none;
+
+  @media (min-width: @tablet-width) {
+    top: -14px;
+    left: 196px;
+    width: 34px;
+    height: 34px;
+    background-color: #ffffff;
+    border: 1px solid #cdcdcd;
+    border-radius: 50%;
+    box-sizing: border-box;
+
+    &:active {
+      border: 1px solid @green;
+    }
+
+    &::before {
+      position: absolute;
+      width: 8px;
+      height: 8px;
+      top: 12px;
+      left: 12px;
+      background-color: @green;
+      border-radius: 50%;
+      content: "";
+    }
+  }
 }
