--- a/source/less/blocks/main-logo.less
+++ b/source/less/blocks/main-logo.less
@@ -2,10 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 
   @media (min-width: @tablet-width) {
     align-items: flex-start;
-    margin-left: 117px;
+    padding: 64px 30px 0;
+    margin: 0 auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 82px 110px 267px;
+    width: 100%;
+    max-width: 1440px;
+    box-sizing: border-box;
   }
 }
 
@@ -24,7 +33,7 @@
     align-items: flex-start;
     background-image: none;
     background-color: #ffffff;
-    padding: 27px 0 50px;
+    padding: 0;
   }
 }
 
@@ -46,7 +55,13 @@
     color: #000000;
     text-align: left;
     width: 414px;
+    padding-left: 87px;
     margin-bottom: 41px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 80px;
+    margin-bottom: 40px;
   }
 }
 
@@ -66,22 +81,34 @@
     line-height: 20px;
     color: #000000;
     text-align: left;
+    padding-left: 87px;
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 80px;
+    margin-bottom: 52px;
   }
 }
 
 .main-logo__image {
   position: absolute;
   top: 50%;
-  left: 30%;
 
   @media (min-width: @tablet-width) {
-    top: 70%;
-    left: 60%;
+    position: static;
+    content: url("../img/main-logo-tablet.png");
+    width: 709px;
+    height: 609px;
   }
 
   @media (min-width: @desktop-width) {
-    top: 30%;
-    left: 110%;
+    content: url("../img/main-logo-desktop.png");
+    position: absolute;
+    top: -82px;
+    left: 448px;
+    width: 552px;
+    height: 499px;
   }
 }
 
@@ -99,12 +126,29 @@
   margin-top: 138px;
   padding: 7px 20px;
   width: 240px;
+  z-index: 1;
+
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 
   @media (min-width: @tablet-width) {
-    margin: 0 0 526px;
+    font-size: 20px;
+    line-height: 20px;
+    position: absolute;
+    top: 294px;
+    left: 120px;
+    padding: 14px 26px;
+    margin: 0;
+    width: 244px;
+    box-sizing: border-box;
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 0 267px;
+    left: 190px;
   }
 }
