--- a/source/less/blocks/main-descriptions.less
+++ b/source/less/blocks/main-descriptions.less
@@ -1,16 +1,16 @@
 .main-descriptions {
-  padding: 25px 20px 53px;
+  padding: 0 20px 47px;
   margin: 0 auto;
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
-    padding: 0 30px 47px;
+    padding: 0 30px 70px;
     border-bottom: 1px solid #d9d9d9;
     max-width: 768px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 0 110px 69px;
+    padding: 0 110px 92px;
     border-bottom: none;
     max-width: 1440px;
   }
@@ -27,7 +27,7 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
-  margin: 0 0 40px;
+  margin: 0 0 42px;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
@@ -47,12 +47,12 @@
   @media (min-width: @tablet-width) {
     flex-direction: row;
     flex-wrap: wrap;
-    column-gap: 154px;
-    row-gap: 37px;
+    column-gap: 135px;
+    row-gap: 61px;
   }
 
   @media (min-width: @desktop-width) {
-    column-gap: 74px;
+    column-gap: 77px;
   }
 }
 
@@ -65,7 +65,7 @@
   line-height: 18px;
   color: #444444;
   padding-left: 80px;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
   min-height: 60px;
   z-index: 1;
 
@@ -88,7 +88,7 @@
       position: absolute;
       width: 30px;
       height: 32px;
-      top: 14px;
+      top: 12px;
       left: 15px;
       background-image: url("../img/description-icon_leaf.svg");
       background-repeat: no-repeat;
@@ -101,7 +101,7 @@
       position: absolute;
       width: 29px;
       height: 31px;
-      top: 13px;
+      top: 11px;
       left: 15px;
       background-image: url("../img/description-icon_tub.svg");
       background-repeat: no-repeat;
@@ -114,8 +114,8 @@
       position: absolute;
       width: 25px;
       height: 30px;
-      top: 15px;
-      left: 18px;
+      top: 13px;
+      left: 19px;
       background-image: url("../img/description-icon_eat.svg");
       background-repeat: no-repeat;
       content: "";
@@ -127,7 +127,7 @@
       position: absolute;
       width: 32px;
       height: 33px;
-      top: 13px;
+      top: 11px;
       left: 14px;
       background-image: url("../img/description-icon_weight.svg");
       background-repeat: no-repeat;
@@ -204,6 +204,11 @@
         content: "";
       }
     }
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 247px;
+    padding: 153px 0 33px;
   }
 }
 
