--- a/source/less/blocks/main-example.less
+++ b/source/less/blocks/main-example.less
@@ -21,18 +21,19 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
-  padding: 0 20px;
+  padding: 25px 20px 0;
   margin: 0 0 40px;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
     line-height: 60px;
-    margin: 0 0 63px;
+    padding: 43px 30px 0;
+    margin: 0 0 65px;
   }
 
   @media (min-width: @desktop-width) {
     padding: 0 110px;
-    margin: 0 0 76px;
+    margin: 0 0 77px;
     width: 1220px;
   }
 }
@@ -41,13 +42,13 @@
   padding: 0 20px;
 
   @media (min-width: @tablet-width) {
-    padding: 0 30px;
+    padding: 0 30px 5px;
     background-color: #ffffff;
   }
 
   @media (min-width: @desktop-width) {
     background-color: #eaeaea;
-    padding: 70px 110px 75px;
+    padding: 70px 100px 75px 110px;
     max-width: 436px;
   }
 }
@@ -65,11 +66,13 @@
   @media (min-width: @tablet-width) {
     font-size: 16px;
     line-height: 24px;
-    margin: 0 0 54px;
+    padding-right: 10px;
+    margin: 0 0 52px;
   }
 
   @media (min-width: @desktop-width) {
     margin: 0 0 69px;
+    padding-right: 0;
   }
 }
 
@@ -77,11 +80,12 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 0 auto 40px;
+  margin: 0 auto 26px;
   max-width: 370px;
 
   @media (min-width: @tablet-width) {
     justify-content: start;
+    align-items: flex-end;
     max-width: 1440px;
     margin-bottom: 250px;
   }
@@ -122,7 +126,7 @@
 
 .main-example__legend {
   position: absolute;
-  top: 47px;
+  top: 45px;
   left: 18px;
   background-color: #eaeaea;
   font-family: "Arial", sans-serif;
@@ -132,13 +136,13 @@
   line-height: 12px;
   color: #444444;
   text-align: center;
-  width: 77px;
+  width: 82px;
 
   @media (min-width: @tablet-width) {
     font-size: 14px;
     line-height: 14px;
     top: 62px;
-    left: 25px;
+    left: 29px;
     width: auto;
     background-color: #ffffff;
 
@@ -156,12 +160,13 @@
   line-height: 24px;
   text-transform: uppercase;
   text-align: center;
-  padding: 15px 0 17px;
+  padding: 14px 0 14px;
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     font-size: 30px;
     line-height: 37px;
+    padding: 13px 0 18px;
   }
 }
 
@@ -216,23 +221,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 20px 40px;
+  padding: 0 20px 43px;
 
   @media (min-width: @tablet-width) {
     position: relative;
     background-color: #eaeaea;
-    padding: 366px 30px 62px;
+    padding: 370px 30px 60px;
   }
 
   @media (min-width: @desktop-width) {
     justify-content: space-between;
-    padding: 357px 84px 70px;
+    padding: 360px 84px 70px;
     width: 616px;
   }
 }
 
 .main-example__range-image {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 
   @media (min-width: @tablet-width) {
     content: url("../img/image_cat_tablet.png");
@@ -243,7 +248,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: -175px;
+    top: -179px;
+    left: 93px;
   }
 }
 
@@ -263,6 +269,9 @@
   background-color: #eaeaea;
 
   @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    padding: 0;
     border-bottom: 1px dotted #000000;
 
     &:hover {
@@ -290,7 +299,7 @@
     height: 6px;
     border: none;
     background-color: #dcdcdc;
-    margin: 0 23px;
+    margin: 0 24px 0 23px;
   }
 }
 
