--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -14,7 +14,7 @@
 .main-nav--closed .main-nav__toggle::before {
   position: absolute;
   content: "";
-  top: 11px;
+  top: 10px;
   left: 8px;
   right: 10px;
   width: 24px;
@@ -26,7 +26,7 @@
 .main-nav__wrapper {
   @media (max-width: @mobile-width-only) {
     position: absolute;
-    top: 64px;
+    top: 65px;
     left: 0;
     width: 100%;
     z-index: 1;
@@ -70,7 +70,7 @@
   &::after {
     content: "";
     position: absolute;
-    top: 20px;
+    top: 18px;
     left: 8px;
     width: 24px;
     height: 2px;
@@ -134,12 +134,24 @@
       background-image: url("../img/index-background-desktop.png");
       content: "";
     }
+
+    &::after {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 50%;
+      height: 694px;
+      background-color: @green;
+      opacity: 85%;
+      content: "";
+      z-index: -1;
+    }
   }
 }
 
 .main-nav__item {
   position: relative;
-  padding: 23px 69px;
+  padding: 22px 69px 23px;
   border-top: 1px solid #e6e6e6;
   box-sizing: border-box;
 
@@ -148,14 +160,19 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding: 0 0 12px;
-    margin-left: 35px;
+    padding: 0 0 10px;
+    margin-left: 36px;
     border: none;
     white-space: nowrap;
 
     &:last-child {
       border-bottom: none;
     }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 0 12px;
+    margin-left: 35px;
   }
 }
 
@@ -165,8 +182,8 @@
   @media (min-width: @tablet-width) {
     &::before {
       position: absolute;
-      top: 34px;
-      left: -2px;
+      top: 32px;
+      left: 1px;
       width: 100%;
       height: 2px;
       background-color: @green;
@@ -177,6 +194,7 @@
   @media (min-width: @desktop-width) {
     &::before {
       background-color: #ffffff;
+      top: 35px;
     }
   }
 }
@@ -191,7 +209,6 @@
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
-  padding-right: 5px;
   display: block;
 
   &:hover {
