--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -21,12 +21,12 @@
 .page-footer__address {
   display: flex;
   justify-content: space-between;
-  padding: 28px 20px 26px;
+  padding: 27px 20px 25px;
   margin: 0 auto;
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
-    padding: 60px 70px 56px;
+    padding: 60px 70px 61px;
     min-width: 768px;
   }
 
@@ -34,8 +34,8 @@
     position: absolute;
     top: 95px;
     left: 110px;
-    padding: 60px 80px 60px;
-    width: 565px;
+    padding: 57px 75px 60px 80px;
+    min-width: 565px;
     background-color: #ffffff;
     box-sizing: border-box;
   }
@@ -49,12 +49,28 @@
   line-height: 20px;
   color: #111111;
   text-transform: uppercase;
-  margin: 0;
+  margin: 0 2px 0 0;
+  min-width: 139px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 26px;
     max-width: 172px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 2px;
+  }
+}
+
+.page-footer__text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+
+  @media (min-width: @desktop-width) {
+    align-items: flex-start;
   }
 }
 
@@ -69,9 +85,14 @@
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
-    line-height: 20px;
+    line-height: 18px;
     text-align: right;
     max-width: 160px;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: left;
+    line-height: 20px;
   }
 }
 
@@ -96,7 +117,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 39px 20px 22px;
+  padding: 35px 20px 22px;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
@@ -110,7 +131,7 @@
 }
 
 .page-footer__link {
-  padding-bottom: 32px;
+  padding-bottom: 27px;
   cursor: pointer;
 
   &:hover {
@@ -123,13 +144,20 @@
 
   @media (min-width: @tablet-width) {
     padding: 0;
+    display: block;
+  }
+
+  @media (min-width: @desktop-width) {
+    img {
+      display: block;
+    }
   }
 }
 
 .page-footer__academy-container {
   display: flex;
   align-items: center;
-  padding: 22px 0 0;
+  padding: 20px 0 0;
 
   @media (min-width: @tablet-width) {
     padding: 0;
@@ -144,7 +172,7 @@
   line-height: 18px;
   color: #444444;
   text-decoration: none;
-  margin-right: 140px;
+  margin-right: 139px;
 
   &:hover {
     color: rgba(69, 69, 69, 0.3);
@@ -157,6 +185,12 @@
 }
 
 .page-footer__academy-link-logo {
+  @media (min-width: @tablet-width) {
+    svg {
+      display: block;
+    }
+  }
+
   &:hover {
     .academy-logo {
       fill: @green;
