--- a/source/less/blocks/produsct-set.less
+++ b/source/less/blocks/produsct-set.less
@@ -5,7 +5,7 @@
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
-    padding: 0 30px 45px;
+    padding: 0 30px 49px;
     margin: 0 auto;
   }
 
@@ -41,7 +41,7 @@
     &:nth-child(2) {
       .product-set__title::after {
         top: 5px;
-        left: -10px;
+        left: -8px;
         width: 68px;
         height: 29px;
         background-image: url("../img/product-set-strong.svg");
@@ -59,12 +59,13 @@
 
   @media (min-width: @tablet-width) {
     padding: 77px 316px 53px 52px;
+    margin-bottom: 34px;
 
     &:nth-child(1) {
       .product-set__title::after {
         position: absolute;
-        top: 0;
-        left: 423px;
+        top: 4px;
+        left: 424px;
         width: 140px;
         height: 194px;
         background-image: url("../img/product-set-slim.svg");
@@ -76,8 +77,8 @@
 
     &:nth-child(2) {
       .product-set__title::after {
-        top: 59px;
-        left: 357px;
+        top: 58px;
+        left: 359px;
         width: 269px;
         height: 113px;
         background-image: url("../img/product-set-strong.svg");
@@ -141,7 +142,7 @@
   &::before {
     position: absolute;
     top: -6px;
-    left: 0;
+    left: 2px;
     width: 50px;
     height: 50px;
     background-color: @green;
@@ -153,11 +154,12 @@
     font-size: 36px;
     line-height: 36px;
     padding-left: 0;
+    margin: 0 0 26px;
 
     &::before {
       position: absolute;
       top: 15px;
-      left: 393px;
+      left: 394px;
       width: 200px;
       height: 200px;
       background-color: @green;
@@ -169,7 +171,7 @@
   @media (min-width: @desktop-width) {
     text-align: left;
     padding-left: 162px;
-    margin: 0 0 73px;
+    margin: 0 0 74px;
 
     &::before {
       position: absolute;
@@ -192,7 +194,7 @@
   line-height: 18px;
   color: #444444;
   border-bottom: 1px solid #d9d9d9;
-  margin: 0 0 15px;
+  margin: 0 0 19px;
   padding-bottom: 23px;
 
   @media (min-width: @tablet-width) {
@@ -201,12 +203,13 @@
     color: #000000;
     max-width: 340px;
     border: none;
-    margin: 0 0 25px;
+    margin: 0 0 27px;
   }
 
   @media (min-width: @desktop-width) {
     max-width: 467px;
     margin: 0 0 27px;
+    padding-bottom: 0;
   }
 }
 
@@ -268,11 +271,11 @@
     padding: 4px 57px 4px 0;
 
     &::before {
-      top: 19px;
+      top: 18px;
     }
 
     &::after {
-      top: 15px;
+      top: 14px;
     }
 
     &:hover::before {
