--- a/source/less/blocks/social-container.less
+++ b/source/less/blocks/social-container.less
@@ -3,9 +3,14 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 20px 0;
+  padding: 22px 0 18px;
   width: 100%;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+  }
 }
+
 
 .social-container__list {
   display: flex;
@@ -13,6 +18,7 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+  min-width: 133px;
 
   &::before {
     position: absolute;
@@ -36,6 +42,9 @@
   }
 
   @media (min-width: @tablet-width) {
+    margin-left: 25px;
+    justify-content: space-between;
+
     &::before {
       display: none;
     }
@@ -44,13 +53,42 @@
       display: none;
     }
   }
+
+  @media (min-width: @desctop-width) {
+    margin-left: 30px;
+  }
 }
 
 .social-container__item {
-  margin-right: 35px;
+  margin-right: 36px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+
+    &:nth-child(1) {
+      svg {
+        width: 30px;
+        height: 32px;
+      }
+    }
+
+    &:nth-child(2) {
+      svg {
+        width: 23px;
+        height: 23px;
+      }
+    }
+
+    &:nth-child(3) {
+      svg {
+        width: 25px;
+        height: 30px;
+      }
+    }
+  }
 
   &:last-child {
-    margin-right: 0;
+    margin-right: 5px;
   }
 
   &:last-child:hover {
