--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -132,6 +132,7 @@
       width: 720px;
       height: 694px;
       background-image: url("../img/index-background-desktop.png");
+      background-repeat: no-repeat;
       content: "";
     }
 
@@ -141,8 +142,7 @@
       left: 50%;
       width: 50%;
       height: 694px;
-      background-color: @green;
-      opacity: 85%;
+      background-color: #62a53a;
       content: "";
       z-index: -1;
     }
