--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,3 +16,5 @@
 @import "blocks/gift.less";
 @import "blocks/page-catalog.less";
 @import "blocks/product-card.less";
+@import "blocks/location.less";
+
