--- a/source/less/blocks/main-logo.less
+++ b/source/less/blocks/main-logo.less
@@ -4,6 +4,18 @@
   align-items: center;
   position: relative;
 
+  @media (max-width: @mobile-width-only) {
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 302px;
+      background-color: #62a53a;
+      content: "";
+    }
+  }
+
   @media (min-width: @tablet-width) {
     align-items: flex-start;
     padding: 64px 30px 0;
@@ -26,12 +38,7 @@
   background-image: url("../img/main-bg.svg");
   background-position: center;
   background-repeat: no-repeat;
-  background-color: rgba(104, 183, 56, 0.85);
   padding: 27px 35px 164px;
-
-  @media (max-width: @mobile-width-only) {
-    width: 100%;
-  }
 
   @media (min-width: @tablet-width) {
     align-items: flex-start;
@@ -52,6 +59,10 @@
   padding: 0;
   margin: 0;
   margin-bottom: 25px;
+
+  @media (max-width: @mobile-width-only) {
+    min-height: 72px;
+  }
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
