--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -14,6 +14,10 @@
   margin: 0 auto;
   box-sizing: border-box;
 
+  @media (max-width: @mobile-width-only) {
+    margin: 0;
+  }
+
   @media (min-width: @tablet-width) {
     padding: 60px 70px 61px;
     min-width: 768px;
@@ -40,6 +44,11 @@
   text-transform: uppercase;
   margin: 0 2px 0 0;
   min-width: 139px;
+
+  @media (max-width: @mobile-width-only) {
+    padding-right: 15px;
+    box-sizing: border-box;
+  }
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
